# mosesdecoder

./: .beautify-ignore  .cdtbuild  .cproject  .cvsignore  .gitignore  .gitmodules  .project  .travis.yml  BUILD-INSTRUCTIONS  BUILD-INSTRUCTIONS.txt  CLEANUP-AFTER-AUTOTOOLS.sh  COPYING  DEAD_BRANCH_DO_NOT_USE  FirstView.xib  GHKM_sparse_weights  Jamroot  MainWindow.xib  Makefile  Makefile.am  Makefile.in  NOTICE  README  README.config-switching  README.md  SecondView.xib  View1.h  View1.mm  View1.xib  View2.h  View2.mm  View2.xib  View3.h  View3.mm  View3.xib  aclocal.m4  azure-pipelines.yml  bjam  boost.jam  cgmanifest.json  compile.sh  (+34 more)
MbotDecoder/: .autotools  .cproject  .project  1  BUILD-INSTRUCTIONS.txt  FehlerGetString.txt  Makefile.am  PROBLEM-WITH-THREADS  boost.jam  config.h.in  configure.ac  moses.sln
josiah/: AnnealingSchedule.cpp  AnnealingSchedule.h  Bleu.cpp  Bleu.h  CorpusSampler.cpp  CorpusSampler.h  CorpusSamplerAnnealed.cpp  CorpusSamplerAnnealed.h  CorpusTrainer.cpp  Decoder.cpp  Decoder.h  Dependency.cpp  Dependency.h  Derivation.cpp  Derivation.h  DiscriminativeLMFeature.cpp  DiscriminativeLMFeature.h  DistortionPenaltyFeature.cpp  DistortionPenaltyFeature.h  FV.cpp  FV_mpi.cpp  FeatureFunction.cpp  FeatureFunction.h  FeatureVector.cpp  FeatureVector.h  Gain.cpp  Gain.h  GainFunction.h  Gibbler.cpp  Gibbler.h  GibblerAnnealedExpectedLossTrainer.cpp  GibblerAnnealedExpectedLossTrainer.h  GibblerExpectedLossTraining.cpp  GibblerExpectedLossTraining.h  GibblerMaxDerivDecoder.cpp  GibblerMaxDerivDecoder.h  GibblerMaxTransDecoder.cpp  GibblerMaxTransDecoder.h  GibbsOperator.cpp  GibbsOperator.h  (+94 more)
kenlm/: LICENSE  Makefile  Makefile.am  Makefile.in  README  clean.sh  compile.sh  kenlm.vcxproj  test.sh
lm/: CMakeLists.txt  Jamfile  Makefile.am  README  automaton.hh  automaton_benchmark_main.cc  automaton_main.cc  binary_format.cc  build_binary.cc  compile.sh  config.cc  left.hh  lookup.hh  max_order.cc  max_order.hh  model.cc  model.hh  ngram_query.cc  ngram_query.hh  quantize.hh  read_arpa.cc  search_hashed.hh  search_trie.cc  state.hh  test.sh  trie_sort.hh  value.hh  vocab.cc  vocab.hh
mert/: BleuDocScorer.cpp  BleuDocScorer.h  BleuScorer.cpp  BleuScorer.h  BleuScorerTest.cpp  CHRFScorer.cpp  CHRFScorer.h  CderScorer.cpp  CderScorer.h  Data.cpp  Data.cpp.thread  Data.h  Data.h.thread  DataTest.cpp  ExtractFeatures.cpp  ExtractFeatures.h  Fdstream.h  FeatureArray.cpp  FeatureArray.h  FeatureData.cpp  FeatureData.h  FeatureDataIterator.cpp  FeatureDataIterator.h  FeatureDataTest.cpp  FeatureStats.cpp  FeatureStats.h  FileStream.cpp  FileStream.h  ForestRescore.cpp  ForestRescore.h  ForestRescoreTest.cpp  GzFileBuf.cpp  GzFileBuf.h  HopeFearDecoder.cpp  HopeFearDecoder.h  HwcmSScorer.cpp  HwcmSScorer.h  HwcmScorer.cpp  HwcmScorer.h  HypPackEnumerator.cpp  (+108 more)
mira/: Decoder.cpp  Decoder.h  Hildreth.cpp  Hildreth.h  HildrethTest.cpp  HypothesisQueue.cpp  HypothesisQueue.h  Jamfile  Main.cpp  Main.h  Makefile.am  MiraOptimiser.cpp  MiraTest.cpp  Optimiser.cpp  Optimiser.h  Perceptron.cpp  expt.cfg  extractInformation.perl  mapWeightsToIni.perl  training-expt.perl
misc/: .cdtbuild  .cdtproject  .cproject  .project  1-1-Extraction.cpp  CreateConfig.cpp  CreateProbingPT.cpp  ESMSequences.cpp  GenerateSequences.cpp  GenerateTuples.cpp  GenerateTuples.h  Jamfile  Makefile  Makefile.am  Makefile.in  QueryProbingPT.cpp  TransliterationMining.cpp  addLexROtoPT.cpp  create-ini.cpp  merge-sorted.cc  misc.vcproj  processLexicalTable.cpp  processLexicalTable.vcproj  processLexicalTable.vcxproj  processLexicalTableMin.cpp  processPhraseTable.cpp  processPhraseTable.vcproj  processPhraseTable.vcxproj  processPhraseTableMin.cpp  pruneGeneration.cpp  pruneGeneration.h  prunePhraseTable.cpp  queryLexicalTable.cpp  queryLexicalTableMin.cpp  queryPhraseTable.cpp  queryPhraseTableMin.cpp  reuse-weights.cpp
moses/: .cdtbuild  .cdtproject  .cproject  .cvsignore  .project  AlignmentInfo.cpp  AlignmentInfo.h  AlignmentInfoCollection.cpp  AlignmentInfoCollection.h  AlignmentInfoCollectionMBOT.cpp  AlignmentInfoCollectionMBOT.h  AlignmentInfoMBOT.cpp  AlignmentInfoMBOT.h  AlignmentInfoTest.cpp  BaseManager.cpp  BaseManager.h  BilingualDynSuffixArray.cpp  BilingualDynSuffixArray.h  Bitmap.cpp  Bitmap.h  BitmapContainer.cpp  BitmapContainer.h  Bitmaps.cpp  Bitmaps.h  BleuScoreFeature.cpp  BleuScoreFeature.h  CMakeLists.txt  CacheBasedLanguageModel.cpp  CacheBasedLanguageModel.h  ChartCell.cpp  ChartCell.h  ChartCellCollection.cpp  ChartCellCollection.h  ChartCellCollectionMBOT.cpp  ChartCellCollectionMBOT.h  ChartCellLabel.h  ChartCellLabelMBOT.h  ChartCellLabelSet.h  ChartCellLabelSetMBOT.h  ChartCellMBOT.cpp  (+300 more)
moses-cmd/: .cdtbuild  .cproject  .cvsignore  .project  IOWrapper.cpp  IOWrapper.h  Jamfile  LatticeMBRGrid.cpp  Main.cpp  MainVW.cpp  MainVW.h  Makefile.in  TranslationAnalysis.cpp  TranslationAnalysis.h  TranslationTask.cpp  TranslationTask.h  configure  configure.in  mbr.cpp  moses-cmd.vcproj  moses-cmd.vcxproj  simulate-pe.cc
server/: Jamfile  Makefile  Makefile.am  Makefile.in  client.perl  mosesserver.cpp  sgclient.perl
src/: ConfusionNet.cpp  ConfusionNet.h  CountedPointer.h  CreateTargetPhraseCollection.cpp  CreateTargetPhraseCollection.h  CreateTranslationOptionCollection.cpp  DPR_reordering.cpp  DecodeStep.cpp  DecodeStep.h  DecodeStepGeneration.cpp  DecodeStepGeneration.h  DecodeStepTranslation.cpp  DecodeStepTranslation.h  DecodeStep_Generation.cpp  DecodeStep_Generation.h  DecodeStep_Translation.cpp  DecodeStep_Translation.h  DeletionHypothesis.cpp  DeletionHypothesis.h  Dictionary.cpp  Dictionary.h  DistortionOrientation.cpp  DummyScoreProducers.cpp  DummyScoreProducers.h  Factor.cpp  Factor.h  FactorCollection.cpp  FactorCollection.h  FactorTypeSet.h  File.h  FloydWarshall.cpp  GenerationDictionary.cpp  GenerationDictionary.h  Hypothesis.cpp  Hypothesis.h  HypothesisCollection.cpp  HypothesisCollection.h  HypothesisCollectionIntermediate.cpp  HypothesisStack.cpp  HypothesisStack.h  (+130 more)
trunk/: BUILD-INSTRUCTIONS  BUILD-INSTRUCTIONS.txt  config.h.in  configure.in  (+5 more)
(+10874 files in other folders)
